--- a/src/app/components/coaching-edit/coaching-edit.component.html
+++ b/src/app/components/coaching-edit/coaching-edit.component.html
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="course-selected">
-                            <label>Course Selected :{{" "+courseSelected}}&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-success" (click)="subscribeToCourse()">Subscribe</button></label>
+                            <label>Course Selected :{{" "+courseSelected}}&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-success" (click)="subscribeToCourse()">Users Subscribed To Course</button></label>
                         </div>
                         <div class="item-heading">
                             <h3>Videos</h3>
