--- a/src/app/components/exam-welcome/exam-welcome.component.html
+++ b/src/app/components/exam-welcome/exam-welcome.component.html
@@ -11,7 +11,7 @@
             <p>{{"Time Limit : "+examInFocus.examTime}}</p>
         </div>
         <div class="exam-details">
-            <p>{{"Max marks : "+examInFocus.examMaxMarks}}</p>
+            <p>{{"Max marks : "+examInFocus.examMarks}}</p>
         </div>
         <div class="start-btn">
             <button (click)="startTheExam()" class="btn">Start Exam</button>
