--- a/src/app/components/item-box/item-box.component.html
+++ b/src/app/components/item-box/item-box.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6 col-md-6 item-box p-0 m-0 text-center" *ngFor="let item of items">
     <div class="thumbnail">
-      <img class="img_attr" src="https://media.publit.io/file/700/displayPic-T.jpg" alt=""
+      <img class="img_attr" src="../../../assets/images/coaching.jpg" alt=""
         (click)="viewCoachingDetailClicked(item.id)">
       <div class="caption">
         <h3>{{item.coachingName}}</h3>
