--- a/src/app/components/video-gallery/video-gallery.component.html
+++ b/src/app/components/video-gallery/video-gallery.component.html
@@ -5,10 +5,10 @@
             <div class="player-box">
                 <div id="instructions">
                     <video id="my_video_1" class="video-js vjs-default-skin" width="100%" height="400px" controls
-                        preload="none" poster='http://video-js.zencoder.com/oceans-clip.jpg'
+                        preload="none" [poster]='videoPoster'
                         data-setup='{ "aspectRatio":"640:267", "playbackRates": [1, 1.5, 2] }'>
-                        <source src="https://vjs.zencdn.net/v/oceans.mp4" type='video/mp4' />
-                        <source src="https://vjs.zencdn.net/v/oceans.webm" type='video/webm' />
+                        <source [src]="videoSrc" type='video/mp4' />
+                        <source [src]="videoSrc" type='video/webm' />
                     </video>
                 </div>
             </div>
